2004-07-20	blytkerchan
	* vector.h: s/array/vector/g
	s/ARRAY/VECTOR/g
	s/Array/Vector/g
	* vector.c: ditto

	* module.mk: use support for conditionally compiled files - don't try
	using the automake method

	* module.mk: new file
	* stack.c: don't use already-installed libmemory headers for compile

2004-07-18	blytkerchan
	* Makefile.am: don't compile stuff in test
	* array.h (array_put): fix prototype

	* Makefile.am: prepare for use with new src tree

2004-07-17	blytkerchan
	* vector.c: new file
	* vector.h: ditto
	* array.c: remove resize()
	* array.h: ditto

2004-07-16	blytkerchan
	* version: new file
	* bootstap: removed
	* configure.in: ditto

	* singleton.cc: new file
	* singleton.h: ditto

2004-05-11	blytkerchan	make libmemory optional for compilation (parent might have it)
	* Makefile.am [HAVE_LIBMEMORY]: new conditional
	[DIST_SUBDIRS]: conditionally add libmemory
	[libcontain_la_LIBADD]: conditionally search for libmemory in parent dir
	[AM_CXXFLAGS]: remove arch/include, add $(top_srcdir)
	* configure.in: check that libmemory is in this dir. define automake conditional HAVE_LIBMEMORY accordingly
	re-indent

add missing files..
	* types.h: new file

start implementing list-based hash
	* hash.c: include libmemory headers
	(hash_node_new): new function
	(hash_node_free): ditto
	(hash_node_cmp): ditto
	(hash_new): take new parameter n_buckets
	enclose hash type parameter in conditional block
	return newly created hash even if the type is not well-specified
	enclose old code in conditional block
	(hash_free_helper): new function
	(hash_free): free the hash (new type, type not specified)
	enclose old code in conditional block
	(hash_get): enclose old code in conditional block
	implement getting from new implementation
	* hash.h: reflect above changes
	* hash_config.h.in: add DONT_USE_OBSOLETE
	* libcontain_config.h: bump LIBCONTAIN_MIN_HPTRS
start normalizing interfaces
	* map.c: s/map_key_cmp_func_t/libcontain_cmp_func_t/g
	(map_free_helper): constify